# -Real-Time-Edge-Detection-Viewer

./: README.md
EdgeDetectionApp/: local.properties  package-lock.json
EdgeDetectionApp/app/: build.gradle.kts
EdgeDetectionApp/app/src/main/: AndroidManifest.xml
EdgeDetectionApp/app/src/main/cpp/: CMakeLists.txt  edge_detector.h  native-lib.cpp
EdgeDetectionApp/app/src/main/java/com/example/edgedetectionapp/: CameraRenderer.kt  MainActivity.kt
EdgeDetectionApp/app/src/main/res/: activity_main.xml
EdgeDetectionApp/app/web-viewer/: package.json
EdgeDetectionApp/app/web-viewer/src/: app.ts  edge-detector.ts  index.html  types.ts
EdgeDetectionApp/gradle/wrapper/: gradle-wrapper.properties
